--- a/index.html
+++ b/index.html
@@ -37,19 +37,24 @@
     </div>
   
     <h2 class="label">Romania</h2>
-    <div class="flag" style="">
-      <!-- insert flag here -->
+    <div class="flag" style="display: flex; flex-direction: row;">
+      <div class="romania-blue threehoriz"></div>
+      <div class="romania-yellow threehoriz"></div>
+      <div class="romania-red threehoriz"></div>
     </div>
   
     <h2 class="label">Mexico</h2>
-    <div class="flag">
-      <!-- insert flag here -->
+    <div class="flag" style="display: flex">
+      <div class="mexico-green threehoriz"></div>
+      <!-- <div class="mexico-green threehoriz" id="white"></div> -->
+      <img class="mexico-img threehoriz" src="eagle.png">
+      <div class="mexico-red threehoriz"></div>
     </div>
 
     <h2>Margin</h2>
     <div class="margin-container">
-      <div class="flag"></div>
-      <div class="flag"></div>
+      <div class="flag" id="flag1"></div>
+      <div class="flag" id="flag2"></div>
     </div>
 
     <h2>Padding</h2>
